--- a/main.html
+++ b/main.html
@@ -1,18 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I'm not a robot</title>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <main>
-      <!-- solution start -->
-      
-      <!-- solution end -->
-    </main>
-    <script src="./script.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Human Verification</title>
+    <style>
+        #images-container {
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
+        }
+
+        img {
+            width: 100px;
+            height: 100px;
+            cursor: pointer;
+        }
+
+        #reset, #verify, #para {
+            margin-top: 20px;
+        }
+
+        #reset, #verify {
+            display: none;
+        }
+    </style>
+</head>
+<body>
+    <h3 id="h">Please click on the identical tiles to verify that you are not a robot.</h3>
+    <div id="images-container"></div>
+    <button id="reset" onclick="resetGame()">Reset</button>
+    <button id="verify" onclick="verifySelection()">Verify</button>
+    <p id="para"></p>
+
+    <script>
+        const imagesContainer = document.getElementById("images-container");
+        const resetButton = document.getElementById("reset");
+        const verifyButton = document.getElementById("verify");
+        const para = document.getElementById("para");
+
+        let clickedImages = [];
+        const imageClasses = ["img1", "img2", "img3", "img4", "img5"];
+        let images = [];
+
+        function initializeGame() {
+            para.textContent = "";
+            resetButton.style.display = "none";
+            verifyButton.style.display = "none";
+            clickedImages = [];
+
+            // Randomly choose a duplicate image class
+            const duplicateClass = imageClasses[Math.floor(Math.random() * imageClasses.length)];
+            images = [...imageClasses, duplicateClass];
+
+            // Shuffle the images
+            images = images.sort(() => Math.random() - 0.5);
+
+            // Render the images
+            imagesContainer.innerHTML = "";
+            images.forEach((imageClass, index) => {
+                const img = document.createElement("img");
+                img.className = imageClass;
+                img.alt = `Image ${index + 1}`;
+                img.onclick = () => handleImageClick(imageClass, img);
+                imagesContainer.appendChild(img);
+            });
+        }
+
+        function handleImageClick(imageClass, imgElement) {
+            // Avoid double-clicking the same image
+            if (clickedImages.some(clicked => clicked.imgElement === imgElement)) return;
+
+            resetButton.style.display = "block";
+            if (clickedImages.length < 2) {
+                clickedImages.push({ imageClass, imgElement });
+                imgElement.style.border = "2px solid blue";
+            }
+
+            if (clickedImages.length === 2) {
+                verifyButton.style.display = "block";
+            }
+        }
+
+        function resetGame() {
+            initializeGame();
+        }
+
+        function verifySelection() {
+            verifyButton.style.display = "none";
+
+            if (clickedImages.length === 2) {
+                const [first, second] = clickedImages;
+                if (first.imageClass === second.imageClass) {
+                    para.textContent = "You are a human. Congratulations!";
+                } else {
+                    para.textContent = "We can't verify you as a human. You selected the non-identical tiles.";
+                }
+            }
+
+            clickedImages.forEach(({ imgElement }) => {
+                imgElement.style.border = "none";
+            });
+            clickedImages = [];
+        }
+
+        // Initialize the game on page load
+        initializeGame();
+    </script>
+</body>
 </html>
